# sphere_decomposition

./: .gitignore  CMakeLists.txt  README.md  main.py  requirements.txt
gui/: CMakeLists.txt
gui/include/: gui.hpp
gui/src/: gui.cpp
include/: sphere_decomposition.hpp
src/: pybind.cpp  sphere_decomposition.cu
